--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_BOT_SECRET=NjI0ODE0NjA2NTUyMDA2NzE5.XYWsmA.VEQLYoe78V2JAo_HEds1mZlfOp4
+DISCORD_BOT_SECRET='NjI0ODE0NjA2NTUyMDA2NzE5.XhaEEg.fjM1704c8pBipKwbHOFDALKeooU'
